--- a/environment.yaml
+++ b/environment.yaml
@@ -1,183 +1,243 @@
 name: pycon21
 channels:
+  - pytorch
+  - fastai
   - pyviz
+  - conda-forge
   - defaults
 dependencies:
-  - _libgcc_mutex=0.1=main
-  - anyio=2.2.0=py39h06a4308_0
-  - argon2-cffi=20.1.0=py39h27cfd23_1
-  - async_generator=1.10=pyhd3eb1b0_0
-  - attrs=20.3.0=pyhd3eb1b0_0
-  - babel=2.9.0=pyhd3eb1b0_0
-  - backcall=0.2.0=pyhd3eb1b0_0
-  - blas=1.0=mkl
-  - bleach=3.3.0=pyhd3eb1b0_0
-  - bokeh=2.3.0=py39h06a4308_0
-  - brotlipy=0.7.0=py39h27cfd23_1003
-  - ca-certificates=2021.1.19=h06a4308_1
-  - cartopy=0.18.0=py39h0d9ca2b_1
-  - certifi=2020.12.5=py39h06a4308_0
-  - cffi=1.14.5=py39h261ae71_0
-  - chardet=4.0.0=py39h06a4308_1003
-  - click=7.1.2=pyhd3eb1b0_0
-  - cloudpickle=1.6.0=py_0
-  - colorcet=2.0.6=py_0
-  - cryptography=3.4.7=py39hd23ed53_0
-  - cycler=0.10.0=py39h06a4308_0
-  - cytoolz=0.11.0=py39h27cfd23_0
-  - dask=2021.3.0=pyhd3eb1b0_0
-  - dask-core=2021.3.0=pyhd3eb1b0_0
-  - datashader=0.11.1=py_0
-  - datashape=0.5.4=py39h06a4308_1
-  - dbus=1.13.18=hb2f20db_0
-  - decorator=4.4.2=pyhd3eb1b0_0
-  - defusedxml=0.7.1=pyhd3eb1b0_0
-  - distributed=2021.3.1=py39h06a4308_0
-  - entrypoints=0.3=py39h06a4308_0
-  - expat=2.3.0=h2531618_2
-  - fontconfig=2.13.1=h6c09931_0
-  - freetype=2.10.4=h5ab3b9f_0
-  - fsspec=0.8.7=pyhd3eb1b0_0
-  - geos=3.8.0=he6710b0_0
-  - geoviews-core=1.9.1=py_0
-  - glib=2.68.0=h36276a3_0
-  - gst-plugins-base=1.14.0=h8213a91_2
-  - gstreamer=1.14.0=h28cd5cc_2
-  - heapdict=1.0.1=py_0
-  - holoviews=1.14.2=py_0
-  - hvplot=0.7.1=py_0
-  - icu=58.2=he6710b0_3
-  - idna=2.10=pyhd3eb1b0_0
-  - importlib-metadata=3.7.3=py39h06a4308_1
-  - importlib_metadata=3.7.3=hd3eb1b0_1
-  - intel-openmp=2020.2=254
-  - ipykernel=5.3.4=py39hb070fc8_0
-  - ipython=7.22.0=py39hb070fc8_0
-  - ipython_genutils=0.2.0=pyhd3eb1b0_1
-  - jedi=0.17.2=py39h06a4308_1
-  - jinja2=2.11.3=pyhd3eb1b0_0
-  - jpeg=9b=h024ee3a_2
-  - json5=0.9.5=py_0
-  - jsonschema=3.2.0=py_2
-  - jupyter-packaging=0.7.12=pyhd3eb1b0_0
-  - jupyter_client=6.1.12=pyhd3eb1b0_0
-  - jupyter_core=4.7.1=py39h06a4308_0
-  - jupyter_server=1.4.1=py39h06a4308_0
-  - jupyterlab_pygments=0.1.2=py_0
-  - jupyterlab_server=2.4.0=pyhd3eb1b0_0
-  - kiwisolver=1.3.1=py39h2531618_0
-  - lcms2=2.11=h396b838_0
-  - ld_impl_linux-64=2.33.1=h53a641e_7
-  - libffi=3.3=he6710b0_2
-  - libgcc-ng=9.1.0=hdf63c60_0
-  - libgfortran-ng=7.3.0=hdf63c60_0
-  - libllvm10=10.0.1=hbcb73fb_5
-  - libpng=1.6.37=hbc83047_0
-  - libsodium=1.0.18=h7b6447c_0
-  - libstdcxx-ng=9.1.0=hdf63c60_0
-  - libtiff=4.1.0=h2733197_1
-  - libuuid=1.0.3=h1bed415_2
-  - libxcb=1.14=h7b6447c_0
-  - libxml2=2.9.10=hb55368b_3
-  - llvmlite=0.36.0=py39h612dafd_4
-  - locket=0.2.1=py39h06a4308_1
-  - lz4-c=1.9.3=h2531618_0
-  - markdown=3.3.4=py39h06a4308_0
-  - markupsafe=1.1.1=py39h27cfd23_0
-  - matplotlib=3.3.4=py39h06a4308_0
-  - matplotlib-base=3.3.4=py39h62a2d02_0
-  - mistune=0.8.4=py39h27cfd23_1000
-  - mkl=2020.2=256
-  - mkl-service=2.3.0=py39he8ac12f_0
-  - mkl_fft=1.3.0=py39h54f3939_0
-  - mkl_random=1.0.2=py39h63df603_0
-  - msgpack-python=1.0.2=py39hff7bd54_1
-  - multipledispatch=0.6.0=py39h06a4308_0
-  - nbclassic=0.2.6=pyhd3eb1b0_0
-  - nbclient=0.5.3=pyhd3eb1b0_0
-  - nbconvert=6.0.7=py39h06a4308_0
-  - nbformat=5.1.2=pyhd3eb1b0_1
-  - ncurses=6.2=he6710b0_1
-  - nest-asyncio=1.5.1=pyhd3eb1b0_0
-  - notebook=6.3.0=py39h06a4308_0
-  - numba=0.53.1=py39ha9443f7_0
-  - numpy=1.19.2=py39h89c1606_0
-  - numpy-base=1.19.2=py39h2ae0177_0
-  - olefile=0.46=py_0
-  - openssl=1.1.1k=h27cfd23_0
-  - packaging=20.9=pyhd3eb1b0_0
-  - pandas=1.2.3=py39ha9443f7_0
-  - pandoc=2.12=h06a4308_0
-  - pandocfilters=1.4.3=py39h06a4308_1
-  - panel=0.11.1=py_0
-  - param=1.10.1=pyhd3eb1b0_0
-  - parso=0.7.0=py_0
-  - partd=1.1.0=py_0
-  - pcre=8.44=he6710b0_0
-  - pexpect=4.8.0=pyhd3eb1b0_3
-  - pickleshare=0.7.5=pyhd3eb1b0_1003
-  - pillow=8.1.2=py39he98fc37_0
-  - pip=21.0.1=py39h06a4308_0
-  - proj=6.2.1=haa6030c_0
-  - prometheus_client=0.9.0=pyhd3eb1b0_0
-  - prompt-toolkit=3.0.17=pyh06a4308_0
-  - psutil=5.8.0=py39h27cfd23_1
-  - ptyprocess=0.7.0=pyhd3eb1b0_2
-  - pycparser=2.20=py_2
-  - pyct=0.4.8=py_0
-  - pyct-core=0.4.8=py_0
-  - pygments=2.8.1=pyhd3eb1b0_0
-  - pyopenssl=20.0.1=pyhd3eb1b0_1
-  - pyparsing=2.4.7=pyhd3eb1b0_0
-  - pyqt=5.9.2=py39h2531618_6
-  - pyrsistent=0.17.3=py39h27cfd23_0
-  - pyshp=2.1.3=pyhd3eb1b0_0
-  - pysocks=1.7.1=py39h06a4308_0
-  - python=3.9.2=hdb3f193_0
-  - python-dateutil=2.8.1=pyhd3eb1b0_0
-  - pytz=2021.1=pyhd3eb1b0_0
-  - pyviz_comms=2.0.1=py_0
-  - pyyaml=5.4.1=py39h27cfd23_1
-  - pyzmq=20.0.0=py39h2531618_1
-  - qt=5.9.7=h5867ecd_1
-  - readline=8.1=h27cfd23_0
-  - requests=2.25.1=pyhd3eb1b0_0
-  - scipy=1.6.2=py39h91f5cce_0
-  - seaborn=0.11.1=pyhd3eb1b0_0
-  - send2trash=1.5.0=pyhd3eb1b0_1
-  - setuptools=52.0.0=py39h06a4308_0
-  - shapely=1.7.0=py39h7c4d384_0
-  - sip=4.19.13=py39h2531618_0
-  - six=1.15.0=py39h06a4308_0
-  - sniffio=1.2.0=py39h06a4308_1
-  - sortedcontainers=2.3.0=pyhd3eb1b0_0
-  - sqlite=3.35.3=hdfb4753_0
-  - tbb=2020.3=hfd86e86_0
-  - tblib=1.7.0=py_0
-  - terminado=0.9.4=py39h06a4308_0
-  - testpath=0.4.4=pyhd3eb1b0_0
-  - tk=8.6.10=hbc83047_0
-  - toolz=0.11.1=pyhd3eb1b0_0
-  - tornado=6.1=py39h27cfd23_0
-  - tqdm=4.59.0=pyhd3eb1b0_1
-  - traitlets=5.0.5=pyhd3eb1b0_0
-  - typing_extensions=3.7.4.3=pyha847dfd_0
-  - tzdata=2020f=h52ac0ba_0
-  - urllib3=1.26.4=pyhd3eb1b0_0
-  - wcwidth=0.2.5=py_0
-  - webencodings=0.5.1=py39h06a4308_1
-  - wheel=0.36.2=pyhd3eb1b0_0
-  - xarray=0.17.0=pyhd3eb1b0_0
-  - xz=5.2.5=h7b6447c_0
-  - yaml=0.2.5=h7b6447c_0
-  - zeromq=4.3.4=h2531618_0
-  - zict=2.0.0=pyhd3eb1b0_0
-  - zipp=3.4.1=pyhd3eb1b0_0
-  - zlib=1.2.11=h7b6447c_3
-  - zstd=1.4.9=haebb681_0
+  - _libgcc_mutex=0.1
+  - _openmp_mutex=4.5
+  - anyio=2.2.0
+  - argon2-cffi=20.1.0
+  - async_generator=1.10
+  - attrs=20.3.0
+  - babel=2.9.0
+  - backcall=0.2.0
+  - blas=1.0
+  - bleach=3.3.0
+  - bokeh=2.3.0
+  - brotlipy=0.7.0
+  - ca-certificates=2020.12.5
+  - cartopy=0.18.0
+  - catalogue=1.0.0
+  - certifi=2020.12.5
+  - cffi=1.14.5
+  - chardet=4.0.0
+  - click=7.1.2
+  - cloudpickle=1.6.0
+  - colorcet=2.0.6
+  - cryptography=3.4.7
+  - cudatoolkit=11.0.221
+  - cycler=0.10.0
+  - cymem=2.0.5
+  - cython-blis=0.7.4
+  - cytoolz=0.11.0
+  - dask=2021.3.0
+  - dask-core=2021.3.0
+  - datashader=0.11.1
+  - datashape=0.5.4
+  - dbus=1.13.18
+  - decorator=4.4.2
+  - defusedxml=0.7.1
+  - distributed=2021.3.1
+  - entrypoints=0.3
+  - expat=2.3.0
+  - fastai=2.3.0
+  - fastcore=1.3.19
+  - fastprogress=1.0.0
+  - firefox=88.0
+  - fontconfig=2.13.1
+  - freetype=2.10.4
+  - fsspec=0.8.7
+  - geckodriver=0.29.0
+  - geos=3.8.0
+  - geoviews-core=1.9.1
+  - glib=2.68.0
+  - gst-plugins-base=1.14.0
+  - gstreamer=1.14.0
+  - heapdict=1.0.1
+  - holoviews=1.14.2
+  - hvplot=0.7.1
+  - icu=58.2
+  - idna=2.10
+  - importlib-metadata=3.7.3
+  - importlib_metadata=3.7.3
+  - intel-openmp=2020.2
+  - ipykernel=5.3.4
+  - ipython=7.22.0
+  - ipython_genutils=0.2.0
+  - ipywidgets=7.6.3
+  - jedi=0.17.2
+  - jinja2=2.11.3
+  - joblib=1.0.1
+  - jpeg=9b
+  - json5=0.9.5
+  - jsonschema=3.0.2
+  - jupyter-packaging=0.7.12
+  - jupyter_client=6.1.12
+  - jupyter_core=4.7.1
+  - jupyter_server=1.4.1
+  - jupyterlab_pygments=0.1.2
+  - jupyterlab_server=2.4.0
+  - jupyterlab_widgets=1.0.0
+  - kiwisolver=1.3.1
+  - lcms2=2.11
+  - ld_impl_linux-64=2.33.1
+  - libffi=3.3
+  - libgcc=7.2.0
+  - libgcc-ng=9.3.0
+  - libgfortran-ng=7.3.0
+  - libgomp=9.3.0
+  - libllvm10=10.0.1
+  - libpng=1.6.37
+  - libsodium=1.0.18
+  - libstdcxx-ng=9.3.0
+  - libtiff=4.1.0
+  - libuuid=1.0.3
+  - libxcb=1.14
+  - libxml2=2.9.10
+  - llvmlite=0.36.0
+  - locket=0.2.1
+  - lz4-c=1.9.3
+  - markdown=3.3.4
+  - markupsafe=1.1.1
+  - matplotlib=3.3.4
+  - matplotlib-base=3.3.4
+  - mistune=0.8.4
+  - mkl=2020.2
+  - mkl-service=2.3.0
+  - mkl_fft=1.3.0
+  - mkl_random=1.0.2
+  - msgpack-python=1.0.2
+  - multipledispatch=0.6.0
+  - murmurhash=1.0.5
+  - nbclassic=0.2.6
+  - nbclient=0.5.3
+  - nbconvert=6.0.7
+  - nbformat=5.1.2
+  - ncurses=6.2
+  - nest-asyncio=1.5.1
+  - ninja=1.10.2
+  - nodejs=12.4.0
+  - notebook=6.3.0
+  - numba=0.53.1
+  - numpy=1.19.2
+  - numpy-base=1.19.2
+  - olefile=0.46
+  - openssl=1.1.1k
+  - packaging=20.9
+  - pandas=1.2.3
+  - pandoc=2.12
+  - pandocfilters=1.4.3
+  - panel=0.11.1
+  - param=1.10.1
+  - parso=0.7.0
+  - partd=1.1.0
+  - pcre=8.44
+  - pexpect=4.8.0
+  - pickleshare=0.7.5
+  - pillow=8.1.2
+  - pip=21.0.1
+  - plac=1.1.0
+  - preshed=3.0.2
+  - proj=6.2.1
+  - prometheus_client=0.9.0
+  - prompt-toolkit=3.0.17
+  - psutil=5.8.0
+  - ptyprocess=0.7.0
+  - pycparser=2.20
+  - pyct=0.4.8
+  - pyct-core=0.4.8
+  - pygments=2.8.1
+  - pyopenssl=20.0.1
+  - pyparsing=2.4.7
+  - pyqt=5.9.2
+  - pyrsistent=0.17.3
+  - pyshp=2.1.3
+  - pysocks=1.7.1
+  - python=3.9.2
+  - python-dateutil=2.8.1
+  - python_abi=3.9
+  - pytorch=1.7.1
+  - pytz=2021.1
+  - pyviz_comms=2.0.1
+  - pyyaml=5.4.1
+  - pyzmq=20.0.0
+  - qt=5.9.7
+  - readline=8.1
+  - requests=2.25.1
+  - scikit-learn=0.24.1
+  - scipy=1.6.2
+  - seaborn=0.11.1
+  - selenium=3.141.0
+  - send2trash=1.5.0
+  - setuptools=52.0.0
+  - shapely=1.7.0
+  - sip=4.19.13
+  - six=1.15.0
+  - sniffio=1.2.0
+  - sortedcontainers=2.3.0
+  - spacy=2.3.5
+  - sqlite=3.35.3
+  - srsly=1.0.5
+  - tbb=2020.3
+  - tblib=1.7.0
+  - terminado=0.9.4
+  - testpath=0.4.4
+  - thinc=7.4.5
+  - threadpoolctl=2.1.0
+  - tk=8.6.10
+  - toolz=0.11.1
+  - torchvision=0.8.2
+  - tornado=6.1
+  - traitlets=5.0.5
+  - typing_extensions=3.7.4.3
+  - tzdata=2020f
+  - urllib3=1.26.4
+  - wasabi=0.8.2
+  - wcwidth=0.2.5
+  - webencodings=0.5.1
+  - wheel=0.36.2
+  - widgetsnbextension=3.5.1
+  - xarray=0.17.0
+  - xz=5.2.5
+  - yaml=0.2.5
+  - zeromq=4.3.4
+  - zict=2.0.0
+  - zipp=3.4.1
+  - zlib=1.2.11
+  - zstd=1.4.9
   - pip:
+    - affine==2.3.0
+    - altair==4.1.0
+    - aquirdturtle-collapsible-headings==3.0.1
+    - click-plugins==1.1.1
+    - cligj==0.7.1
+    - contextily==1.1.0
+    - datasets==1.5.0
+    - dill==0.3.3
+    - filelock==3.0.12
+    - fiona==1.8.19
     - flask==1.1.2
+    - geographiclib==1.50
+    - geopandas==0.9.0
+    - geopy==2.1.0
+    - huggingface-hub==0.0.8
     - itsdangerous==1.1.0
     - jupyterlab==3.0.12
+    - mapclassify==2.4.2
+    - mercantile==1.2.1
+    - multiprocess==0.70.11.1
+    - munch==2.5.0
+    - networkx==2.5.1
+    - pyarrow==3.0.0
+    - pyproj==3.0.1
+    - rasterio==1.2.2
+    - rtree==0.9.7
+    - snuggs==1.4.7
+    - tqdm==4.49.0
+    - vega-datasets==0.9.0
     - werkzeug==1.0.1
+    - xxhash==2.0.2
 prefix: /home/ramon/anaconda3/envs/pycon21
