--- a/environment.yaml
+++ b/environment.yaml
@@ -1,243 +1,47 @@
-name: pycon21
+name: pycon-d4a
 channels:
-  - pytorch
-  - fastai
   - pyviz
   - conda-forge
   - defaults
 dependencies:
-  - _libgcc_mutex=0.1
-  - _openmp_mutex=4.5
-  - anyio=2.2.0
-  - argon2-cffi=20.1.0
-  - async_generator=1.10
-  - attrs=20.3.0
-  - babel=2.9.0
-  - backcall=0.2.0
-  - blas=1.0
-  - bleach=3.3.0
-  - bokeh=2.3.0
-  - brotlipy=0.7.0
-  - ca-certificates=2020.12.5
-  - cartopy=0.18.0
-  - catalogue=1.0.0
-  - certifi=2020.12.5
-  - cffi=1.14.5
-  - chardet=4.0.0
-  - click=7.1.2
-  - cloudpickle=1.6.0
-  - colorcet=2.0.6
-  - cryptography=3.4.7
-  - cudatoolkit=11.0.221
-  - cycler=0.10.0
-  - cymem=2.0.5
-  - cython-blis=0.7.4
-  - cytoolz=0.11.0
-  - dask=2021.3.0
-  - dask-core=2021.3.0
-  - datashader=0.11.1
-  - datashape=0.5.4
-  - dbus=1.13.18
-  - decorator=4.4.2
-  - defusedxml=0.7.1
-  - distributed=2021.3.1
-  - entrypoints=0.3
-  - expat=2.3.0
-  - fastai=2.3.0
-  - fastcore=1.3.19
-  - fastprogress=1.0.0
-  - firefox=88.0
-  - fontconfig=2.13.1
-  - freetype=2.10.4
-  - fsspec=0.8.7
-  - geckodriver=0.29.0
-  - geos=3.8.0
-  - geoviews-core=1.9.1
-  - glib=2.68.0
-  - gst-plugins-base=1.14.0
-  - gstreamer=1.14.0
-  - heapdict=1.0.1
-  - holoviews=1.14.2
-  - hvplot=0.7.1
-  - icu=58.2
-  - idna=2.10
-  - importlib-metadata=3.7.3
-  - importlib_metadata=3.7.3
-  - intel-openmp=2020.2
-  - ipykernel=5.3.4
-  - ipython=7.22.0
-  - ipython_genutils=0.2.0
-  - ipywidgets=7.6.3
-  - jedi=0.17.2
-  - jinja2=2.11.3
-  - joblib=1.0.1
-  - jpeg=9b
-  - json5=0.9.5
-  - jsonschema=3.0.2
-  - jupyter-packaging=0.7.12
-  - jupyter_client=6.1.12
-  - jupyter_core=4.7.1
-  - jupyter_server=1.4.1
-  - jupyterlab_pygments=0.1.2
-  - jupyterlab_server=2.4.0
-  - jupyterlab_widgets=1.0.0
-  - kiwisolver=1.3.1
-  - lcms2=2.11
-  - ld_impl_linux-64=2.33.1
-  - libffi=3.3
-  - libgcc=7.2.0
-  - libgcc-ng=9.3.0
-  - libgfortran-ng=7.3.0
-  - libgomp=9.3.0
-  - libllvm10=10.0.1
-  - libpng=1.6.37
-  - libsodium=1.0.18
-  - libstdcxx-ng=9.3.0
-  - libtiff=4.1.0
-  - libuuid=1.0.3
-  - libxcb=1.14
-  - libxml2=2.9.10
-  - llvmlite=0.36.0
-  - locket=0.2.1
-  - lz4-c=1.9.3
-  - markdown=3.3.4
-  - markupsafe=1.1.1
-  - matplotlib=3.3.4
-  - matplotlib-base=3.3.4
-  - mistune=0.8.4
-  - mkl=2020.2
-  - mkl-service=2.3.0
-  - mkl_fft=1.3.0
-  - mkl_random=1.0.2
-  - msgpack-python=1.0.2
-  - multipledispatch=0.6.0
-  - murmurhash=1.0.5
-  - nbclassic=0.2.6
-  - nbclient=0.5.3
-  - nbconvert=6.0.7
-  - nbformat=5.1.2
-  - ncurses=6.2
-  - nest-asyncio=1.5.1
-  - ninja=1.10.2
-  - nodejs=12.4.0
-  - notebook=6.3.0
-  - numba=0.53.1
-  - numpy=1.19.2
-  - numpy-base=1.19.2
-  - olefile=0.46
-  - openssl=1.1.1k
-  - packaging=20.9
-  - pandas=1.2.3
-  - pandoc=2.12
-  - pandocfilters=1.4.3
-  - panel=0.11.1
-  - param=1.10.1
-  - parso=0.7.0
-  - partd=1.1.0
-  - pcre=8.44
-  - pexpect=4.8.0
-  - pickleshare=0.7.5
-  - pillow=8.1.2
-  - pip=21.0.1
-  - plac=1.1.0
-  - preshed=3.0.2
-  - proj=6.2.1
-  - prometheus_client=0.9.0
-  - prompt-toolkit=3.0.17
-  - psutil=5.8.0
-  - ptyprocess=0.7.0
-  - pycparser=2.20
-  - pyct=0.4.8
-  - pyct-core=0.4.8
-  - pygments=2.8.1
-  - pyopenssl=20.0.1
-  - pyparsing=2.4.7
-  - pyqt=5.9.2
-  - pyrsistent=0.17.3
-  - pyshp=2.1.3
-  - pysocks=1.7.1
-  - python=3.9.2
-  - python-dateutil=2.8.1
-  - python_abi=3.9
-  - pytorch=1.7.1
-  - pytz=2021.1
-  - pyviz_comms=2.0.1
-  - pyyaml=5.4.1
-  - pyzmq=20.0.0
-  - qt=5.9.7
-  - readline=8.1
-  - requests=2.25.1
-  - scikit-learn=0.24.1
-  - scipy=1.6.2
-  - seaborn=0.11.1
-  - selenium=3.141.0
-  - send2trash=1.5.0
-  - setuptools=52.0.0
-  - shapely=1.7.0
-  - sip=4.19.13
-  - six=1.15.0
-  - sniffio=1.2.0
-  - sortedcontainers=2.3.0
-  - spacy=2.3.5
-  - sqlite=3.35.3
-  - srsly=1.0.5
-  - tbb=2020.3
-  - tblib=1.7.0
-  - terminado=0.9.4
-  - testpath=0.4.4
-  - thinc=7.4.5
-  - threadpoolctl=2.1.0
-  - tk=8.6.10
-  - toolz=0.11.1
-  - torchvision=0.8.2
-  - tornado=6.1
-  - traitlets=5.0.5
-  - typing_extensions=3.7.4.3
-  - tzdata=2020f
-  - urllib3=1.26.4
-  - wasabi=0.8.2
-  - wcwidth=0.2.5
-  - webencodings=0.5.1
-  - wheel=0.36.2
-  - widgetsnbextension=3.5.1
-  - xarray=0.17.0
-  - xz=5.2.5
-  - yaml=0.2.5
-  - zeromq=4.3.4
-  - zict=2.0.0
-  - zipp=3.4.1
-  - zlib=1.2.11
-  - zstd=1.4.9
-  - pip:
-    - affine==2.3.0
-    - altair==4.1.0
-    - aquirdturtle-collapsible-headings==3.0.1
-    - click-plugins==1.1.1
-    - cligj==0.7.1
-    - contextily==1.1.0
-    - datasets==1.5.0
-    - dill==0.3.3
-    - filelock==3.0.12
-    - fiona==1.8.19
-    - flask==1.1.2
-    - geographiclib==1.50
-    - geopandas==0.9.0
-    - geopy==2.1.0
-    - huggingface-hub==0.0.8
-    - itsdangerous==1.1.0
-    - jupyterlab==3.0.12
-    - mapclassify==2.4.2
-    - mercantile==1.2.1
-    - multiprocess==0.70.11.1
-    - munch==2.5.0
-    - networkx==2.5.1
-    - pyarrow==3.0.0
-    - pyproj==3.0.1
-    - rasterio==1.2.2
-    - rtree==0.9.7
-    - snuggs==1.4.7
-    - tqdm==4.49.0
-    - vega-datasets==0.9.0
-    - werkzeug==1.0.1
-    - xxhash==2.0.2
-prefix: /home/ramon/anaconda3/envs/pycon21
+  - numpy
+  - matplotlib
+  - scipy
+  - bokeh
+  - seaborn
+  - jupyterlab=3.0.12
+  - pandas
+  - pip
+  - python=3.9
+  - holoviews
+  - param
+  - hvplot
+  - geoviews-core
+  - datashader
+  - nodejs
+  - selenium
+  - geckodriver
+  - geopandas
+  - panel
+  - shapely
+  - toolz
+  - param
+  - iris
+  - colorcet
+  - altair
+  - geos
+  - gdal
+  - contextily
+  - fiona
+  - flask
+  - geographiclib
+  - geopy
+  - itsdangerous
+  - mapclassify
+  - mercantile
+  - networkx
+  - pyarrow
+  - pyproj
+  - rasterio
+  - rtree
+  - tqdm
